--- a/Styles/headers.css
+++ b/Styles/headers.css
@@ -1,338 +1,341 @@
-/* ----------------------------------- Fonts Link ----------------------------------- */
-
-@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca&family=Open+Sans&family=Work+Sans&display=swap');
-
-* {
-    margin: 0;
-    padding: 0;
-    text-decoration: none;
-    box-sizing: border-box;
-    font-family: 'Work Sans', sans-serif;
-}
-
-.top-section {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    background: #90EE90;
-    height: 30px;
-}
-
-.top-section-title {
-    font-size: 20px;
-    font-weight: 500;
-}
-
-.icons {
-    display: flex;
-}
-
-.icons li {
-    list-style: none;
-}
-
-.icons li a {
-    text-decoration: none;
-    margin-right: 5px;
-    font-size: 14px;
-    border-radius: 5px;
-    color: #000;
-    border: 2px solid #000;
-    padding: 2px;
-}
-@media screen and (max-width: 660px) {
-    .top-section-title{
-        font-size: 12px;
+    /* ----------------------------------- Fonts Link ----------------------------------- */
+    
+    @import url('https://fonts.googleapis.com/css2?family=Lexend+Deca&family=Open+Sans&family=Work+Sans&display=swap');
+    * {
+        margin: 0;
+        padding: 0;
+        text-decoration: none;
+        box-sizing: border-box;
+        font-family: 'Work Sans', sans-serif;
     }
-}
-
-/* ----------------------------------- Nav Bar ----------------------------------- */
-
-.hrader-sections {
-    background: #EEEF20;
-    width: 100%;
-    height: 100px;
-    margin-top: 2px;
-}
-
-.hrader-sections nav {
-    display: flex;
-    justify-content: space-around;
-    margin: 0 auto;
-    height: 100px;
-    align-items: center;
-}
-
-nav .hrader-section {
-    display: flex;
-    align-items: center;
-}
-
-nav .hrader-section .list {
-    margin-left: 80px;
-    display: flex;
-}
-
-.logo {
-    padding-top: 5px;
-    width: 120px;
-    height: 100px;
-    display: flex;
-    flex-direction: column;
-}
-
-.logo img {
-    width: 100px;
-    height: 80px;
-    border-radius: 5px;
-}
-
-.logo-text {
-    font-size: 16px;
-    font-weight: 900;
-    color: #000;
-}
-
-.list li {
-    list-style: none;
-    line-height: 70px;
-}
-
-.list li a,
-.list li label {
-    color: #000;
-    font-size: 18px;
-    font-weight: 900;
-    padding: 9px 17px;
-}
-
-.list li label {
-    display: none;
-}
-
-.list li a:hover,
-.list li label:hover {
-    color: #000;
-    background: #fff;
-    border-radius: 5px;
-}
-
-.hrader-sections .menu-icon {
-    color: #000;
-    font-size: 18px;
-    cursor: pointer;
-    line-height: 70px;
-    width: 70px;
-    text-align: center;
-}
-
-.list li a.active {
-    color: #0c490cf2;
-    background: #fff;
-    padding: 5px;
-    border-radius: 5px;
-    margin-right: 10px;
-}
-
-.list li a.logactive {
-    color: #fff;
-    background: #000;
-    padding: 5px;
-    border-radius: 5px;
-    font-weight: 500;
-    margin-left: 10px;
-}
-
-.list li a.logactive:hover {
-    color: #000;
-    background: #fff;
-}
-
-.menu-icon {
-    display: none;
-}
-
-.hrader-sections #show-search:checked~.search-icon i::before {
-    content: "\f00d";
-}
-
-
-.hrader-sections input[type="checkbox"] {
-    display: none;
-}
-
-/* --------------------------- Dropdown Menu --------------------------- */
-.list ul {
-    position: absolute;
-    background: #90EE90;
-    top: 20px;
-    opacity: 0;
-    visibility: hidden;
-    border-radius: 10px;
-    transition: all 0.5s ease;
-}
-
-.list li:hover>ul {
-    top: 100px;
-    opacity: 1;
-    visibility: visible;
-    transition: all 0.5s ease;
-}
-
-.list ul li a {
-    display: block;
-    width: 100%;
-    line-height: 30px;
-    border-radius: 5px !important;
-}
-
-.list ul li a:hover {
-    background: #000;
-    color: #fff;
-}
-
-
-@media screen and (max-width: 1280px) {
-    .hrader-sections .menu-icon {
-        display: block;
-    }
-
-    .hrader-sections #show-menu:checked~.menu-icon i::before {
-        content: "\f00d";
-    }
-
-    nav .hrader-section .list {
-        display: block;
-        position: fixed;
-        z-index: 99;
+    
+    .top-section {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
         background: #90EE90;
-        height: 100%;
+        height: 30px;
+    }
+    
+    .top-section-title {
+        font-size: 20px;
+        font-weight: 900;
+    }
+    
+    .large-text {
+        font-size: 25px;
+    }
+    
+    .icons {
+        display: flex;
+    }
+    
+    .icons li {
+        list-style: none;
+    }
+    
+    .icons li a {
+        text-decoration: none;
+        margin-right: 5px;
+        font-size: 14px;
+        border-radius: 5px;
+        color: #000;
+        border: 2px solid #000;
+        padding: 2px;
+    }
+    
+    @media screen and (max-width: 660px) {
+        .top-section-title {
+            font-size: 12px;
+        }
+        .large-text {
+            font-size: 20px;
+        }
+    }
+    
+    @media screen and (max-width: 380px) {
+        .top-section-title {
+            font-size: 10px;
+        }
+        .large-text {
+            font-size: 12px;
+        }
+    }
+    /* ----------------------------------- Nav Bar ----------------------------------- */
+    
+    .hrader-sections {
+        background: #EEEF20;
         width: 100%;
-        top: 140px;
-        left: -100%;
-        margin-left: 0;
-        overflow-y: auto;
-        padding-bottom: 100px;
-        transition: all 0.3s ease;
-        text-align: center;
+        height: 100px;
+        margin-top: 2px;
     }
-
-    nav #show-menu:checked~.hrader-section .list {
-        left: 0%;
+    
+    .hrader-sections nav {
+        display: flex;
+        justify-content: space-around;
+        margin: 0 auto;
+        height: 100px;
+        align-items: center;
     }
-
+    
+    nav .hrader-section {
+        display: flex;
+        align-items: center;
+    }
+    
+    nav .hrader-section .list {
+        margin-left: 80px;
+        display: flex;
+    }
+    
+    .logo {
+        padding-top: 5px;
+        width: 120px;
+        height: 100px;
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .logo img {
+        width: 100px;
+        height: 80px;
+        border-radius: 5px;
+    }
+    
+    .logo-text {
+        font-size: 16px;
+        font-weight: 900;
+        color: #000;
+    }
+    
     .list li {
-        margin: 15px 20px;
+        list-style: none;
+        line-height: 70px;
     }
-
+    
     .list li a,
     .list li label {
-        line-height: 40px;
-        font-size: 20px;
-        display: block;
-        padding: 8px 16px;
-        cursor: pointer;
+        color: #000;
+        font-size: 18px;
+        font-weight: 900;
+        padding: 9px 17px;
     }
-
-    .list li a.hrader-main-title {
+    
+    .list li label {
         display: none;
     }
-
+    
+    .list li a:hover,
+    .list li label:hover {
+        color: #000;
+        background: #fff;
+        border-radius: 5px;
+    }
+    
+    .hrader-sections .menu-icon {
+        color: #000;
+        font-size: 18px;
+        cursor: pointer;
+        line-height: 70px;
+        width: 70px;
+        text-align: center;
+    }
+    
+    .list li a.active {
+        color: #0c490cf2;
+        background: #fff;
+        padding: 5px;
+        border-radius: 5px;
+        margin-right: 10px;
+    }
+    
+    .list li a.logactive {
+        color: #fff;
+        background: #000;
+        padding: 5px;
+        border-radius: 5px;
+        font-weight: 500;
+        margin-left: 10px;
+    }
+    
+    .list li a.logactive:hover {
+        color: #000;
+        background: #fff;
+    }
+    
+    .menu-icon {
+        display: none;
+    }
+    
+    .hrader-sections #show-search:checked~.search-icon i::before {
+        content: "\f00d";
+    }
+    
+    .hrader-sections input[type="checkbox"] {
+        display: none;
+    }
     /* --------------------------- Dropdown Menu --------------------------- */
-    .list ul,
-    .list ul ul {
-        position: static;
+    
+    .list ul {
+        position: absolute;
+        background: #90EE90;
+        top: 20px;
+        opacity: 0;
+        visibility: hidden;
+        border-radius: 10px;
+        transition: all 0.5s ease;
+    }
+    
+    .list li:hover>ul {
+        top: 100px;
         opacity: 1;
         visibility: visible;
-        background: none;
-        max-height: 0px;
-        overflow: hidden;
+        transition: all 0.5s ease;
     }
-
-    .list #hrader-sub-title:checked~ul {
-        max-height: 100vh;
-    }
-
-    .list ul li {
-        margin: 7px 20px;
-        background: #EEEF20;
-        border-radius: 10px;
-    }
-
+    
     .list ul li a {
-        font-size: 14px;
+        display: block;
+        width: 100%;
         line-height: 30px;
         border-radius: 5px !important;
     }
-}
-@media screen and (max-width: 400px) {
-    .hrader-sections nav {
-        padding: 0 10px;
+    
+    .list ul li a:hover {
+        background: #000;
+        color: #fff;
     }
-}
-
-/* -----------------------------------  BANGLA SECTION -----------------------------------  */
-.bangla {
-    margin-top: 5px;
-    background: #90EE90;
-}
-
-.bangla-section {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    height: 35px;
-}
-
-.bangla-section li {
-    list-style: none;
-}
-
-.bangla-section li a {
-    text-decoration: none;
-    font-size: 16px;
-    font-weight: 700;
-    color: #000;
-    padding: 5px;
-}
-
-.bangla-section li a:hover {
-    color: #0c490cf2;
-    background: #fff;
-    padding: 5px;
-    border-radius: 5px;
-}
-
-/* ------------------------- RESPONSIVE ------------------------- */
-@media screen and (max-width: 680px) {
+    
+    @media screen and (max-width: 1280px) {
+        .hrader-sections .menu-icon {
+            display: block;
+        }
+        .hrader-sections #show-menu:checked~.menu-icon i::before {
+            content: "\f00d";
+        }
+        nav .hrader-section .list {
+            display: block;
+            position: fixed;
+            z-index: 99;
+            background: #90EE90;
+            height: 100%;
+            width: 100%;
+            top: 140px;
+            left: -100%;
+            margin-left: 0;
+            overflow-y: auto;
+            padding-bottom: 100px;
+            transition: all 0.3s ease;
+            text-align: center;
+        }
+        nav #show-menu:checked~.hrader-section .list {
+            left: 0%;
+        }
+        .list li {
+            margin: 15px 20px;
+        }
+        .list li a,
+        .list li label {
+            line-height: 40px;
+            font-size: 20px;
+            display: block;
+            padding: 8px 16px;
+            cursor: pointer;
+        }
+        .list li a.hrader-main-title {
+            display: none;
+        }
+        /* --------------------------- Dropdown Menu --------------------------- */
+        .list ul,
+        .list ul ul {
+            position: static;
+            opacity: 1;
+            visibility: visible;
+            background: none;
+            max-height: 0px;
+            overflow: hidden;
+        }
+        .list #hrader-sub-title:checked~ul {
+            max-height: 100vh;
+        }
+        .list ul li {
+            margin: 7px 20px;
+            background: #EEEF20;
+            border-radius: 10px;
+        }
+        .list ul li a {
+            font-size: 14px;
+            line-height: 30px;
+            border-radius: 5px !important;
+        }
+    }
+    
+    @media screen and (max-width: 400px) {
+        .hrader-sections nav {
+            padding: 0 10px;
+        }
+    }
+    /* -----------------------------------  BANGLA SECTION -----------------------------------  */
+    
+    .bangla {
+        margin-top: 5px;
+        background: #90EE90;
+    }
+    
     .bangla-section {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        height: 60px;
-        padding: 10px;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        height: 35px;
     }
-
+    
+    .bangla-section li {
+        list-style: none;
+    }
+    
     .bangla-section li a {
-        font-size: 12px;
+        text-decoration: none;
+        font-size: 16px;
+        font-weight: 700;
+        color: #000;
+        padding: 5px;
     }
-}
-
-@media screen and (max-width: 300px) {
-    .bangla-section li a {
-        font-size: 10px;
+    
+    .bangla-section li a:hover {
+        color: #0c490cf2;
+        background: #fff;
+        padding: 5px;
+        border-radius: 5px;
     }
-}
-
-/* ----------------- FOR SCROLL BAR -------------------- */
-::-webkit-scrollbar {
-    width: 10px;
-}
-
-::-webkit-scrollbar-thumb {
-    background: linear-gradient(transparent, #55A630);
-    border-radius: 6px;
-}
-
-::-webkit-scrollbar-thumb:hover {
-    background: linear-gradient(transparent, #EEEF20);
-}
+    /* ------------------------- RESPONSIVE ------------------------- */
+    
+    @media screen and (max-width: 680px) {
+        .bangla-section {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            height: 60px;
+            padding: 10px;
+        }
+        .bangla-section li a {
+            font-size: 12px;
+        }
+    }
+    
+    @media screen and (max-width: 300px) {
+        .bangla-section li a {
+            font-size: 10px;
+        }
+    }
+    /* ----------------- FOR SCROLL BAR -------------------- */
+    
+     ::-webkit-scrollbar {
+        width: 10px;
+    }
+    
+     ::-webkit-scrollbar-thumb {
+        background: linear-gradient(transparent, #55A630);
+        border-radius: 6px;
+    }
+    
+     ::-webkit-scrollbar-thumb:hover {
+        background: linear-gradient(transparent, #EEEF20);
+    }
